--- a/Form Design/style.css
+++ b/Form Design/style.css
@@ -238,19 +238,19 @@ a.active,a:hover{
 
   ul{
     position: fixed;
-    width: 45%;
-    height: 100vh;
+    width: 100%;
+    height: 70vh;
     background: #2c3e50;
     top: 62px;
-    left: -100%;
-    right: 80%;
+    left: 100%;
+    /* right: 80%; */
     text-align: center;
     transition: all .5s;
   }
 
   
   .checkbtn:active{
-    transform: rotate(45deg) .5s;
+    /* transform: rotate(45deg) .5s; */
     color: rgb(0, 0, 0);
   }
   nav ul li{
